Se agrega cambios para ejecutar con vault