@@ -123,15 +123,83 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
-		<!--
-		 <dependency>
-			  <groupId>auto.util</groupId>
-			  <artifactId>utilitarios-auto-gap-v1</artifactId>
-			  <version>1.1</version>
-		</dependency>-->
+		<dependency>
+			<groupId>net.serenity-bdd</groupId>
+			<artifactId>serenity-saucelabs</artifactId>
+			<version>${serenity.version}</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
+		<profile>
+		<id>instalar</id>
+		<activation>
+			<activeByDefault>true</activeByDefault>
+		</activation>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M5</version>
+					<configuration>
+						<systemPropertyVariables>
+							<!--suppress UnresolvedMavenProperty -->
+							<appPath>${v_appPathActual}</appPath>
+							<noReset>false</noReset>
+							<fullReset>true</fullReset>
+						</systemPropertyVariables>
+						<includes>
+							<include>**/**Rimac*.java</include>
+						</includes>
+						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>org.apache.maven.surefire</groupId>
+							<artifactId>surefire-junit-platform</artifactId>
+							<version>3.0.0-M5</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+			</plugins>
+		</build>
+		</profile>
+
+		<profile>
+			<id>noInstalar</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M5</version>
+						<configuration>
+							<systemPropertyVariables>
+								<!--suppress UnresolvedMavenProperty -->
+								<appPath>${v_appPathActual}</appPath>
+								<noReset>true</noReset>
+								<fullReset>false</fullReset>
+							</systemPropertyVariables>
+							<includes>
+								<include>**/**Rimac*.java</include>
+							</includes>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.surefire</groupId>
+								<artifactId>surefire-junit-platform</artifactId>
+								<version>3.0.0-M5</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 		<profile>
 			<id>verMinRequerida</id>
 			<activation>
